src/test/resources/testcases/invalid/variables/duplicate_const.tc

int main() {
    const int a = 1;
    const int a = 2;
    return a;
}

